Gone back to old way of doing comb and diff calculations Added in chroma checks to both comb and diff numbers Moved resource.h out of stdafx.h Added use chroma option on menu to enable chroma and luma film detect

--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -717,6 +717,7 @@ BEGIN
             MENUITEM "&Automatic Pulldown Detect",  IDM_AUTODETECT
             MENUITEM "&Fall Back to Video on Bad Pulldown", IDM_FALLBACK
             MENUITEM "&JudderTerminator (tm)",      IDM_JUDDERTERMINATOR
+            MENUITEM "Use &Chroma in Film Detect",  IDM_USECHROMA
             MENUITEM SEPARATOR
             POPUP "&Manual Film Mode Select"
             BEGIN
