--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -715,7 +715,7 @@ BEGIN
             MENUITEM "&Automatic Pulldown Detect",  IDM_AUTODETECT
             MENUITEM "&Fall Back to Video on Bad Pulldown", IDM_FALLBACK
             MENUITEM "&JudderTerminator (tm)",      IDM_JUDDERTERMINATOR
-            MENUITEM "Use &Chroma in Film Detect",  IDM_USECHROMA
+            MENUITEM "Include &Chroma in Detection", IDM_USECHROMA
             MENUITEM SEPARATOR
             POPUP "&Manual Film Mode Select"
             BEGIN
