First attempt at gettin the mixer code to work properly

--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -282,122 +282,36 @@ BEGIN
                     ES_READONLY
 END
 
-MIXERSETTINGS DIALOG DISCARDABLE  22, 17, 402, 266
+MIXERSETUP DIALOG DISCARDABLE  22, 17, 251, 178
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "DScaler Mixer Setup"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,340,250,55,15
-    PUSHBUTTON      "Cancel",IDCANCEL,5,250,55,15
-    COMBOBOX        IDC_COMBO1,81,5,170,110,CBS_DROPDOWNLIST | WS_VSCROLL | 
-                    WS_TABSTOP
-    LTEXT           "Device",IDC_STATIC,11,5,55,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_COMBO2,95,20,155,110,CBS_DROPDOWNLIST | WS_VSCROLL | 
-                    WS_TABSTOP
-    LTEXT           "Output",IDC_STATIC,11,20,70,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_COMBO3,111,36,140,110,CBS_DROPDOWNLIST | WS_VSCROLL | 
-                    WS_TABSTOP
-    LTEXT           "Input",IDC_STATIC,11,35,70,12,SS_CENTERIMAGE
-    GROUPBOX        "Control Item",IDC_STATIC,5,50,255,155
-    COMBOBOX        IDC_COMBO4,121,60,130,110,CBS_DROPDOWNLIST | WS_VSCROLL | 
-                    WS_TABSTOP
-    LTEXT           "Control ID",IDC_STATIC,15,80,50,10
-    LTEXT           "Control Type",IDC_STATIC,15,90,50,10
-    LTEXT           "Forward Control",IDC_STATIC,15,100,55,10
-    LTEXT           "Multiple Items",IDC_STATIC,15,110,50,10
-    LTEXT           "Short Name",IDC_STATIC,15,120,40,10
-    LTEXT           "Long Name",IDC_STATIC,15,130,40,10
-    RTEXT           "",TEXT1,75,80,55,10
-    RTEXT           "",TEXT2,75,90,55,10
-    RTEXT           "",TEXT3,75,100,55,10
-    RTEXT           "",TEXT4,75,110,55,10
-    RTEXT           "",TEXT5,55,120,75,10
-    RTEXT           "",TEXT6,55,130,195,10
-    LTEXT           "Minimum",IDC_STATIC,135,80,40,10
-    LTEXT           "Maximum",IDC_STATIC,135,90,35,10
-    LTEXT           "Steps",IDC_STATIC,135,101,30,10
-    RTEXT           "",TEXT7,180,80,70,10
-    RTEXT           "",TEXT8,180,90,70,10
-    RTEXT           "",TEXT9,180,101,70,10
-    LTEXT           "Channels",IDC_STATIC,135,110,30,10
-    RTEXT           "",TEXT10,180,110,70,10
-    LTEXT           "Typ",IDC_STATIC,135,120,25,10
-    RTEXT           "",TEXT11,180,121,70,10
-    LTEXT           "Switches",IDC_TEXT12,15,150,35,10,NOT WS_VISIBLE
-    RTEXT           "",TEXT12,55,150,60,10,NOT WS_VISIBLE
-    PUSHBUTTON      "Switch",IDC_BUTTON1,55,160,60,10,NOT WS_VISIBLE
-    PUSHBUTTON      "+",IDC_BUTTON2,55,160,25,10,NOT WS_VISIBLE
-    PUSHBUTTON      "-",IDC_BUTTON3,91,160,25,10,NOT WS_VISIBLE
-    LTEXT           "Switches",IDC_TEXT13,151,150,35,10,NOT WS_VISIBLE
-    RTEXT           "",TEXT13,191,150,60,10,NOT WS_VISIBLE
-    PUSHBUTTON      "Switches",IDC_BUTTON4,191,160,60,10,NOT WS_VISIBLE
-    PUSHBUTTON      "+",IDC_BUTTON5,191,160,25,10,NOT WS_VISIBLE
-    PUSHBUTTON      "-",IDC_BUTTON6,226,160,25,10,NOT WS_VISIBLE
-    LTEXT           "Switches",IDC_TEXT14,15,175,35,10,NOT WS_VISIBLE
-    RTEXT           "",TEXT14,55,175,60,10,NOT WS_VISIBLE
-    PUSHBUTTON      "Switches",IDC_BUTTON7,55,185,60,10,NOT WS_VISIBLE
-    PUSHBUTTON      "+",IDC_BUTTON8,55,185,25,10,NOT WS_VISIBLE
-    PUSHBUTTON      "-",IDC_BUTTON9,91,185,25,10,NOT WS_VISIBLE
-    LTEXT           "Switches",IDC_TEXT15,151,175,35,10,NOT WS_VISIBLE
-    RTEXT           "",TEXT15,191,175,60,10,NOT WS_VISIBLE
-    PUSHBUTTON      "Switches",IDC_BUTTON10,191,185,60,10,NOT WS_VISIBLE
-    PUSHBUTTON      "+",IDC_BUTTON11,191,185,25,10,NOT WS_VISIBLE
-    PUSHBUTTON      "-",IDC_BUTTON12,226,185,25,10,NOT WS_VISIBLE
-    LTEXT           "Internet ID",IDC_STATIC,15,215,35,10
-    LTEXT           "",TEXT20,61,215,74,10
-    LTEXT           "Control",IDC_STATIC,15,60,80,10
-    CONTROL         "Set at Program start",IDC_CHECK1,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,15,230,120,10
-    CONTROL         "As Mute",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,155,230,100,10
-    CONTROL         "As Volume/Balance",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,155,220,100,10
-    GROUPBOX        "Use As",IDC_STATIC,5,205,255,40
-    LISTBOX         IDC_LIST1,270,20,125,225,LBS_NOINTEGRALHEIGHT | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Active adjustments",IDC_STATIC,270,5,95,8
-    GROUPBOX        "Current status",IDC_STATIC,10,140,245,60
-END
-
-MIXERSETUP DIALOG DISCARDABLE  22, 17, 307, 181
-STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
-CAPTION "DScaler Mixer Setup"
-FONT 8, "MS Sans Serif"
-BEGIN
-    LTEXT           "Audio-Device",IDC_STATIC,5,30,45,10
-    LTEXT           "",TEXT1,55,30,95,20
-    LTEXT           "Volume-Control",IDC_STATIC,5,60,50,10
-    LTEXT           "",TEXT2,55,60,95,20
-    LTEXT           "Mute-Control",IDC_STATIC,5,90,50,10
-    LTEXT           "",TEXT3,55,90,95,20
-    DEFPUSHBUTTON   "OK",IDOK,5,165,55,15
-    PUSHBUTTON      "Cancel",IDCANCEL,245,165,55,15
-    PUSHBUTTON      "Assign",IDC_BUTTON1,125,165,55,15
-    CTEXT           "Volume",TEXT13,160,10,33,10
-    CONTROL         "",TEXT4,"Static",SS_ETCHEDFRAME,155,5,45,150
-    CONTROL         "SLIDER",TEXT7,"Static",SS_BITMAP,170,40,15,13
-    PUSHBUTTON      "",IDC_S1,170,55,15,10,WS_DISABLED
-    EDITTEXT        IDC_D1,160,30,35,10,ES_CENTER | ES_AUTOHSCROLL | 
-                    WS_DISABLED
-    CTEXT           "Left",TEXT10,160,20,33,10
-    CONTROL         "Always On",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,5,140,125,10
-    CONTROL         "Mixer-Device activate and control",IDC_CHECK2,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,5,10,140,10
-    CTEXT           "Volume",TEXT14,210,10,33,10
-    CONTROL         "",TEXT5,"Static",SS_ETCHEDFRAME,205,5,45,150
-    CONTROL         "SLIDER",TEXT8,"Static",SS_BITMAP,220,40,15,13
-    PUSHBUTTON      "",IDC_S3,220,55,15,10,WS_DISABLED
-    EDITTEXT        IDC_D3,210,30,35,10,ES_CENTER | ES_AUTOHSCROLL | 
-                    WS_DISABLED
-    CTEXT           "Both",TEXT11,210,20,33,10
-    CTEXT           "Volume",TEXT15,260,10,33,10
-    CONTROL         "",TEXT6,"Static",SS_ETCHEDFRAME,255,5,45,150
-    CONTROL         "SLIDER",TEXT9,"Static",SS_BITMAP,270,40,15,13
-    PUSHBUTTON      "",IDC_S2,270,55,15,10,WS_DISABLED
-    EDITTEXT        IDC_D2,260,30,35,10,ES_CENTER | ES_AUTOHSCROLL | 
-                    WS_DISABLED
-    CTEXT           "Right",TEXT12,260,20,33,10
+    DEFPUSHBUTTON   "OK",IDOK,6,157,32,15
+    PUSHBUTTON      "Cancel",IDCANCEL,41,157,32,15
+    CONTROL         "Use Mixer",IDC_USE_MIXER,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,6,7,47,10
+    LTEXT           "Mixer",IDC_STATIC,6,25,18,11
+    LTEXT           "Destination",IDC_STATIC,6,43,36,11
+    LTEXT           "Tuner Line",IDC_STATIC,6,61,35,11
+    COMBOBOX        IDC_MIXER,66,23,178,50,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_DEST,66,41,178,47,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Composite",IDC_STATIC,6,79,34,11
+    LTEXT           "S-Video",IDC_STATIC,6,97,34,11
+    LTEXT           "Other 1",IDC_STATIC,6,115,24,11
+    LTEXT           "Other 2",IDC_STATIC,6,133,24,11
+    COMBOBOX        IDC_TUNER,66,59,178,49,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMPOSITE,66,77,178,49,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_SVIDEO,66,95,178,49,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_OTHER1,66,113,178,45,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_OTHER2,66,131,178,51,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
 END
 
 ABOUT DIALOGEX 22, 17, 374, 274
@@ -991,16 +905,12 @@ BEGIN
         BOTTOMMARGIN, 63
     END
 
-    "MIXERSETTINGS", DIALOG
-    BEGIN
-        RIGHTMARGIN, 395
-        BOTTOMMARGIN, 223
-    END
-
     "MIXERSETUP", DIALOG
     BEGIN
-        RIGHTMARGIN, 300
-        BOTTOMMARGIN, 138
+        LEFTMARGIN, 6
+        RIGHTMARGIN, 244
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 172
     END
 
     "ABOUT", DIALOG
