added basic auto format detection

--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -681,6 +681,8 @@ BEGIN
             MENUITEM "PA&L-N\tShift+Alt+F5",        IDM_TYPEFORMAT_4
             MENUITEM "NTSC Japan   \tShift+Alt+F6", IDM_TYPEFORMAT_5
             MENUITEM "PAL60   \tShift+Alt+F7",      IDM_TYPEFORMAT_6
+            MENUITEM SEPARATOR
+            MENUITEM "Auto Format Detection",       IDM_AUTO_FORMAT
         END
         POPUP "Pixel &Width"
         BEGIN
