Experimental program list changes Changed handling of settings to a more array based approach

--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -59,13 +59,25 @@ BEGIN
     LTEXT           "",IDC_CPU_TYPE,66,163,125,10
 END
 
-CHANNELLIST DIALOG DISCARDABLE  22, 17, 75, 156
-STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION | 
-    WS_SYSMENU
+CHANNELLIST DIALOG DISCARDABLE  22, 17, 255, 181
+STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION
 CAPTION "Channel List"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK2,50,20,40,14,WS_GROUP
+    DEFPUSHBUTTON   "OK",IDOK2,2,164,40,14,WS_GROUP
+    LISTBOX         IDC_PROGRAMLIST,2,3,104,153,LBS_NOINTEGRALHEIGHT | 
+                    WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Details",IDC_STATIC,114,6,131,151
+    LTEXT           "Name",IDC_STATIC,121,18,46,8
+    EDITTEXT        IDC_NAME,121,29,117,14,ES_AUTOHSCROLL
+    LTEXT           "Frequency",IDC_STATIC,121,46,44,10
+    EDITTEXT        IDC_FREQUENCY,121,59,117,14,ES_AUTOHSCROLL
+    LTEXT           "Format",IDC_STATIC,121,107,40,11
+    COMBOBOX        IDC_FORMAT,121,121,114,73,CBS_DROPDOWNLIST | WS_VSCROLL | 
+                    WS_TABSTOP
+    LTEXT           "Channel",IDC_STATIC,121,76,48,12
+    EDITTEXT        IDC_CHANNEL,121,91,114,13,ES_AUTOHSCROLL
+    PUSHBUTTON      "Change",IDC_CHANGE,121,139,63,13
 END
 
 SPLASHBOX DIALOGEX 0, 0, 145, 192
@@ -864,7 +876,9 @@ BEGIN
 
     "CHANNELLIST", DIALOG
     BEGIN
-        BOTTOMMARGIN, 155
+        LEFTMARGIN, 1
+        RIGHTMARGIN, 139
+        BOTTOMMARGIN, 176
     END
 
     "SPLASHBOX", DIALOG
