--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -155,32 +155,22 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,5,5,45,150
     DEFPUSHBUTTON   "OK",IDOK,205,215,45,15
     PUSHBUTTON      "Default",IDDEFAULT,105,215,45,15
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,20,40,15,13
-    PUSHBUTTON      "",IDC_S1,20,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D1,10,30,35,10,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Enhancer",IDC_STATIC,60,10,33,10
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,55,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,70,40,15,13
-    PUSHBUTTON      "",IDC_S2,70,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D2,60,30,35,10,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Loudness",IDC_STATIC,110,10,33,10
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,105,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,120,40,15,13
-    PUSHBUTTON      "",IDC_S3,120,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D3,110,30,35,10,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Bass",IDC_STATIC,160,10,33,8
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,155,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,170,40,15,13
-    PUSHBUTTON      "",IDC_S4,170,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D4,160,30,35,10,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Treble",IDC_STATIC,210,10,33,10
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,205,5,45,150
-    CONTROL         "SLIDER",IDC_STATIC,"Static",SS_BITMAP,220,40,15,13
-    PUSHBUTTON      "",IDC_S5,220,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D5,210,30,35,10,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     PUSHBUTTON      "Cancel",IDCANCEL,5,215,45,15
@@ -188,11 +178,21 @@ BEGIN
     CTEXT           "Balance",IDC_STATIC,10,165,33,10
     EDITTEXT        IDC_D6,45,165,35,10,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
-    CONTROL         "SLIDER1",IDC_STATIC,"Static",SS_BITMAP,130,165,15,13
-    PUSHBUTTON      "",IDC_S6,180,165,10,15,WS_DISABLED
     CONTROL         "Activate Superbass",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,95,195,125,10
     CTEXT           "(+/-)",IDC_STATIC,10,20,33,10
+    CONTROL         "Slider1",IDC_SLIDER1,"msctls_trackbar32",TBS_VERT | 
+                    TBS_BOTH | WS_TABSTOP,14,48,29,97
+    CONTROL         "Slider1",IDC_SLIDER2,"msctls_trackbar32",TBS_VERT | 
+                    TBS_BOTH | WS_TABSTOP,63,48,29,97
+    CONTROL         "Slider1",IDC_SLIDER3,"msctls_trackbar32",TBS_VERT | 
+                    TBS_BOTH | WS_TABSTOP,114,48,29,97
+    CONTROL         "Slider1",IDC_SLIDER4,"msctls_trackbar32",TBS_VERT | 
+                    TBS_BOTH | WS_TABSTOP,164,48,29,97
+    CONTROL         "Slider1",IDC_SLIDER5,"msctls_trackbar32",TBS_VERT | 
+                    TBS_BOTH | WS_TABSTOP,213,48,29,97
+    CONTROL         "Slider6",IDC_SLIDER6,"msctls_trackbar32",TBS_TOP | 
+                    WS_TABSTOP,86,168,156,15
 END
 
 AUDIOEQUALIZER DIALOG DISCARDABLE  0, 0, 257, 175
@@ -205,35 +205,35 @@ BEGIN
     CONTROL         "",-1,"Static",SS_ETCHEDFRAME,5,5,45,150
     DEFPUSHBUTTON   "OK",IDOK,205,160,45,15
     PUSHBUTTON      "Default",IDDEFAULT,105,160,45,15
-    CONTROL         "SLIDER",-1,"Static",SS_BITMAP,20,40,15,13
-    PUSHBUTTON      "",IDC_S1,20,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D1,10,30,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Channel 2",-1,60,10,33,10
     CONTROL         "",-1,"Static",SS_ETCHEDFRAME,55,5,45,150
-    CONTROL         "SLIDER",-1,"Static",SS_BITMAP,70,40,15,13
-    PUSHBUTTON      "",IDC_S2,70,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D2,60,30,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Channel 3",-1,110,10,33,10
     CONTROL         "",-1,"Static",SS_ETCHEDFRAME,105,5,45,150
-    CONTROL         "SLIDER",-1,"Static",SS_BITMAP,120,40,15,13
-    PUSHBUTTON      "",IDC_S3,120,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D3,110,30,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Channel 4",-1,160,10,33,8
     CONTROL         "",-1,"Static",SS_ETCHEDFRAME,155,5,45,150
-    CONTROL         "SLIDER",-1,"Static",SS_BITMAP,170,40,15,13
-    PUSHBUTTON      "",IDC_S4,170,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D4,160,30,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     CTEXT           "Channel 5",-1,210,10,33,10
     CONTROL         "",-1,"Static",SS_ETCHEDFRAME,205,5,45,150
-    CONTROL         "SLIDER",-1,"Static",SS_BITMAP,220,40,15,13
-    PUSHBUTTON      "",IDC_S5,220,55,15,10,WS_DISABLED
     EDITTEXT        IDC_D5,210,30,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED
     PUSHBUTTON      "Cancel",IDCANCEL,7,160,45,15
+    CONTROL         "Slider1",IDC_SLIDER1,"msctls_trackbar32",TBS_AUTOTICKS | 
+                    TBS_VERT | TBS_BOTH | WS_TABSTOP,13,47,29,97
+    CONTROL         "Slider1",IDC_SLIDER2,"msctls_trackbar32",TBS_AUTOTICKS | 
+                    TBS_VERT | TBS_BOTH | WS_TABSTOP,63,47,29,97
+    CONTROL         "Slider1",IDC_SLIDER3,"msctls_trackbar32",TBS_AUTOTICKS | 
+                    TBS_VERT | TBS_BOTH | WS_TABSTOP,113,47,29,97
+    CONTROL         "Slider1",IDC_SLIDER4,"msctls_trackbar32",TBS_AUTOTICKS | 
+                    TBS_VERT | TBS_BOTH | WS_TABSTOP,163,47,29,97
+    CONTROL         "Slider1",IDC_SLIDER5,"msctls_trackbar32",TBS_AUTOTICKS | 
+                    TBS_VERT | TBS_BOTH | WS_TABSTOP,213,47,29,97
 END
 
 VTSTATUS DIALOG DISCARDABLE  22, 17, 237, 135
@@ -854,8 +854,6 @@ END
 //
 
 STARTUP                 BITMAP  DISCARDABLE     "res\\STARTUP.BMP"
-SLIDER                  BITMAP  DISCARDABLE     "res\\slider1.bmp"
-SLIDER1                 BITMAP  DISCARDABLE     "res\\slider.bmp"
 VTCHARLARGE             BITMAP  DISCARDABLE     "res\\Vtx15x18.bmp"
 REDBULB                 BITMAP  DISCARDABLE     "res\\redbulb.bmp"
 GREENBULB               BITMAP  DISCARDABLE     "res\\greenbulb.bmp"
