--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -87,11 +87,10 @@ BEGIN
     LTEXT           "Format",IDC_STATIC,121,123,40,11
     COMBOBOX        IDC_FORMAT,173,120,152,73,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
-    PUSHBUTTON      "Change",IDC_CHANGE,122,139,43,13
-    PUSHBUTTON      "Add",IDC_ADD,171,139,43,13
-    PUSHBUTTON      "Remove",IDC_REMOVE,221,139,43,13
-    PUSHBUTTON      "Up",IDC_UP,269,139,26,13
-    PUSHBUTTON      "Down",IDC_DOWN,300,139,26,13
+    PUSHBUTTON      "Copy",IDC_ADD,123,139,43,13
+    PUSHBUTTON      "Remove",IDC_REMOVE,173,139,43,13
+    PUSHBUTTON      "Up",IDC_UP,223,139,43,13
+    PUSHBUTTON      "Down",IDC_DOWN,273,139,43,13
     DEFPUSHBUTTON   "OK",IDOK,1,165,43,13,WS_GROUP
     PUSHBUTTON      "Cancel",IDCANCEL,49,165,43,13,WS_GROUP
 END
