--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -459,27 +459,29 @@ BEGIN
     PUSHBUTTON      "&Defaults",IDDEFAULTS,107,172,43,14
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 227, 161
+IDD_SETTINGS DIALOGEX 0, 0, 245, 178
 STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Settings"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    LISTBOX         IDC_SETTINGS_LIST,5,5,100,135,LBS_SORT | 
+    LISTBOX         IDC_SETTINGS_LIST,7,1,100,171,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_SETTINGS_EDIT,115,10,40,14,ES_AUTOHSCROLL | 
-                    ES_NUMBER | NOT WS_VISIBLE
+    EDITTEXT        IDC_SETTINGS_EDIT,114,1,40,14,ES_AUTOHSCROLL | ES_NUMBER | 
+                    NOT WS_VISIBLE
     CONTROL         "Spin1",IDC_SETTINGS_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | NOT WS_VISIBLE,155,10,11,14
+                    UDS_ARROWKEYS | NOT WS_VISIBLE,155,1,11,14
     CONTROL         "",IDC_SETTINGS_CHECK,"Button",BS_AUTOCHECKBOX | 
-                    BS_NOTIFY | NOT WS_VISIBLE | WS_TABSTOP,115,10,100,10
-    DEFPUSHBUTTON   "OK",IDOK,170,140,50,14
+                    BS_NOTIFY | NOT WS_VISIBLE | WS_TABSTOP,113,1,128,10
+    DEFPUSHBUTTON   "OK",IDOK,191,158,50,14
     CONTROL         "Slider1",IDC_SETTINGS_SLIDER,"msctls_trackbar32",
-                    TBS_VERT | TBS_TOP | NOT WS_VISIBLE | WS_TABSTOP,170,10,
-                    33,130
+                    TBS_VERT | TBS_TOP | NOT WS_VISIBLE | WS_TABSTOP,208,1,
+                    33,148
     PUSHBUTTON      "Default",IDC_SETTINGS_DEFAULT,115,30,45,14,NOT 
                     WS_VISIBLE
+    COMBOBOX        IDC_CHOOSEFROMLIST,113,1,128,75,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -978,9 +980,9 @@ BEGIN
     IDD_SETTINGS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 88
+        RIGHTMARGIN, 241
+        TOPMARGIN, 1
+        BOTTOMMARGIN, 172
     END
 END
 #endif    // APSTUDIO_INVOKED
