--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -341,7 +341,7 @@ END
 IDD_ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About DScaler"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
     CTEXT           "DScaler Version 2.x",IDC_VERSION,0,3,293,9
@@ -366,8 +366,8 @@ BEGIN
     GROUPBOX        "Support",IDC_STATIC,192,37,180,100
     LTEXT           "The best place to get support for DScaler is the Home Theater Computers foum at the AV Science Forums.",
                     IDC_STATIC,200,47,166,27
-    LTEXT           "John Adcock\nMark Rejhon\nSteve Grimm\nTom Barry\nMichael Eskin\nMichael Samblanet\nLaurent Garnier\nHermes Conrad",
-                    IDC_STATIC,12,52,86,77
+    LTEXT           "John Adcock\nMark Rejhon\nSteve Grimm\nTom Barry\nMichael Eskin\nMichael Samblanet\nLaurent Garnier\nHermes Conrad\nTorbjörn Jansson",
+                    IDC_STATIC,12,52,74,77
     LTEXT           "Please read the FAQ and the appropriate release thread for the version you are using before posting",
                     IDC_STATIC,200,104,166,26
     CTEXT           "http://www.avsforum.com/",IDC_LINK,201,78,162,12,
@@ -564,7 +564,8 @@ BEGIN
         MENUITEM "Toggle Show &Cursor   \tCtrl+Enter", IDM_TOGGLECURSOR
         MENUITEM "Au&tohide Cursor",            IDM_AUTOHIDE_CURSOR
         MENUITEM "&Full Screen\tAlt+Enter",     IDM_FULL_SCREEN
-        MENUITEM "&Always on Top",              IDM_ON_TOP
+        MENUITEM "&Always on Top (Window)",     IDM_ON_TOP
+        MENUITEM "Alway On Top (Full Screen)",  IDM_ALWAYONTOPFULLSCREEN
         POPUP "&OSD"
         BEGIN
             MENUITEM "Show &Next\tEnter",           IDM_SHOW_OSD
