--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -316,7 +316,7 @@ END
 IDD_ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About DScaler"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
     CTEXT           "DScaler Version 3.x",IDC_VERSION,0,3,293,9
@@ -440,6 +440,32 @@ BEGIN
                     WS_VISIBLE
     COMBOBOX        IDC_CHOOSEFROMLIST,113,1,128,75,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
+END
+
+IDD_DISASM_CRASH DIALOG DISCARDABLE  0, 0, 350, 233
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "DScaler Program Failure"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,293,212,50,14
+    LISTBOX         IDC_ASMBOX,7,19,230,100,LBS_OWNERDRAWFIXED | 
+                    LBS_USETABSTOPS | LBS_NOINTEGRALHEIGHT | LBS_NODATA | 
+                    LBS_NOSEL | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "crash reason: programmer needs good whack on head",
+                    IDC_STATIC_BOMBREASON,8,182,219,8
+    LISTBOX         IDC_REGDUMP,242,19,101,158,NOT LBS_NOTIFY | 
+                    LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | 
+                    WS_HSCROLL | WS_TABSTOP
+    LTEXT           "Program disassembly",IDC_STATIC,7,7,66,8
+    LTEXT           "CPU registers",IDC_STATIC,242,7,44,8
+    LTEXT           "DScaler has crashed due to a program error.  Please hit Save to dump diagnostic information to a file called 'crashinfo.txt' in the DScaler program directory, and then OK to bring up the normal crash box.  Click Help for more details.",
+                    IDC_STATIC,7,198,274,25
+    PUSHBUTTON      "Save",IDC_SAVE2,293,180,50,14
+    PUSHBUTTON      "Help",IDC_HELP2,293,197,50,14
+    LISTBOX         IDC_CALL_STACK,7,139,230,38,LBS_NOINTEGRALHEIGHT | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Estimated call stack",IDC_STATIC,7,128,64,8
+    PUSHBUTTON      "Save+",IDC_SAVEPLUS,239,180,50,14
 END
 
 IDD_TSOPTIONS DIALOG DISCARDABLE  0, 0, 239, 154
@@ -989,6 +1015,14 @@ BEGIN
         RIGHTMARGIN, 241
         TOPMARGIN, 1
         BOTTOMMARGIN, 172
+    END
+
+    IDD_DISASM_CRASH, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 88
     END
 
     IDD_TSOPTIONS, DIALOG
