--- a/DScaler/DScaler/DScaler.rc
+++ b/DScaler/DScaler/DScaler.rc
@@ -451,7 +451,7 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "DScaler Program Failure"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,293,212,50,14
+    DEFPUSHBUTTON   "OK",IDOK,293,217,50,14
     LISTBOX         IDC_ASMBOX,7,19,230,100,LBS_OWNERDRAWFIXED | 
                     LBS_USETABSTOPS | LBS_NOINTEGRALHEIGHT | LBS_NODATA | 
                     LBS_NOSEL | WS_VSCROLL | WS_TABSTOP
@@ -460,16 +460,17 @@ BEGIN
     LISTBOX         IDC_REGDUMP,242,19,101,158,NOT LBS_NOTIFY | 
                     LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | 
                     WS_HSCROLL | WS_TABSTOP
-    LTEXT           "Program disassembly",IDC_STATIC,7,7,66,8
-    LTEXT           "CPU registers",IDC_STATIC,242,7,44,8
-    LTEXT           "DScaler has crashed due to a program error.  Please hit Save to dump diagnostic information to a file called 'crashinfo.txt' in the DScaler program directory, and then OK to bring up the normal crash box.  Click Help for more details.",
-                    IDC_STATIC,7,198,274,25
+    LTEXT           "Program disassembly",IDC_STATIC,7,5,66,8
+    LTEXT           "CPU registers",IDC_STATIC,242,5,44,8
+    LTEXT           "DScaler has crashed due to a program error.  Please hit Save or Save+ to dump diagnostic information to a file called 'crashinfo.txt' in the DScaler program directory.  OK exits the dialog.",
+                    IDC_STATIC,7,196,274,24
     PUSHBUTTON      "Save",IDC_SAVE2,293,180,50,14
-    PUSHBUTTON      "Help",IDC_HELP2,293,197,50,14
     LISTBOX         IDC_CALL_STACK,7,139,230,38,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "Estimated call stack",IDC_STATIC,7,128,64,8
-    PUSHBUTTON      "Save+",IDC_SAVEPLUS,239,180,50,14
+    PUSHBUTTON      "Save+",IDC_SAVEPLUS,293,199,50,14
+    LTEXT           "Exiting thiis dislog may be followed by a system crash please save all your work!",
+                    IDC_STATIC,7,222,279,8
 END
 
 IDD_TSOPTIONS DIALOG DISCARDABLE  0, 0, 239, 158
@@ -1047,9 +1048,9 @@ BEGIN
     IDD_DISASM_CRASH, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 88
+        RIGHTMARGIN, 343
+        TOPMARGIN, 5
+        BOTTOMMARGIN, 231
     END
 
     IDD_TSOPTIONS, DIALOG
